compiler/typ/tests/fixtures/diagnostics/0122_adt_record_field_bool_int_01.ml.infer.expected
File "0122_adt_record_field_bool_int_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0122_adt_record_field_bool_int_01 is not a valid module name.

File "0122_adt_record_field_bool_int_01.ml", line 2, characters 40-41:
2 | let _ : rec_alpha = { left = 0; right = 1 }
                                            ^
Error: The constant 1 has type int but an expression was expected of type
         bool
