compiler/typ/tests/fixtures/diagnostics/0122_adt_record_field_bool_int_01.ml
type rec_alpha = { left : int; right : bool }
let _ : rec_alpha = { left = 0; right = 1 }
